<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#499494"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.jarvis.patientmanagement.users.Sign_In_D">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/doctor_login_inputEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/doctor_login_inputPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <CheckBox
            android:id="@+id/doctor_signin_show_password"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="7dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Show Password" />

        <Button
            android:id="@+id/doctor_signin_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="#499494" />

        <Button
            android:id="@+id/doctor_signup_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:text="Return to Patient Login"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:id="@+id/return_to_patient_login_link"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:layout_height="40dp" />

    </LinearLayout>

</LinearLayout>